--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -1,11 +1,25 @@
-@import 'tailwindcss';
+*{
+    box-sizing: border-box;
+    padding: 0;
+    margin: 0;
+    font-family: 'Nunito', 'Poppins', sans-serif;
+    color: #fff;
+}
 
-@source '../../vendor/laravel/framework/src/Illuminate/Pagination/resources/views/*.blade.php';
-@source '../../storage/framework/views/*.php';
-@source '../**/*.blade.php';
-@source '../**/*.js';
+:root{
+    --dark-green: #2E5E4E;
+    --light-green: #7BA982;
 
-@theme {
-    --font-sans: 'Instrument Sans', ui-sans-serif, system-ui, sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji',
-        'Segoe UI Symbol', 'Noto Color Emoji';
+    --terracotta: #C97D4D;
+    --petrol-blue: #3A6B7E;
+
+    --light-white: #F4F4F4;
+    --dark-gray: #3D3D3D;
+
+    --mostard: #FFD166;
+    --coral-red: #E63946;
+}
+
+header{
+    background-color: var(--dark-green);
 }
