--- a/public/css/app.css
+++ b/public/css/app.css
@@ -23,6 +23,7 @@
 
 body{
     max-width: 100vw;
+    height: 100%;
 }
 
 ul{
@@ -327,4 +328,79 @@ header a{
 
 .obs-foto img{
     border-radius: 12px;
+}
+
+.dropdown-itens{
+    background-color: #fff;
+    margin-right: 3.5rem;
+    border-radius: 12px;
+    overflow: hidden;
+}
+
+.dropdown-itens *{
+    color: #000;
+    font-size: 1.2rem;
+    transition: .3s;
+    padding: 0.5rem 1rem;
+}
+
+.dropdown-itens a:hover{
+    background-color: var(--petrol-blue);
+    color: #fff;
+}
+
+.obs-actions{
+    background-color: var(--dark-green);
+    border-radius: 1rem;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    align-items: center;
+
+}
+.obs-actions a{
+    text-decoration: none;
+}
+
+.editar-btn{
+    background-color: var(--mostard);
+    color: #000;
+    padding: 0.5rem 1rem;
+    border-radius: 1rem;
+    transition: .3s;
+}
+.editar-btn:hover{
+    background-color: #a78432;
+    color: #fff;
+}
+
+.delete-btn{
+    background-color: var(--coral-red);
+    color: #fff;
+    padding: 0.5rem 1rem;
+    border-radius: 1rem;
+    transition: .3s;
+}
+.delete-btn:hover{
+    background-color: #b02a2a;
+}
+
+#editar-achado{
+    background-color: var(--light-white);
+    border-radius: 1rem;
+    padding: 2rem;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
+    width: max-content;
+    height: calc(100vh - 2rem * 2);
+    margin: 1.2rem;
+    width: calc(100% - 2rem * 2);
+    opacity: 0;
+    transition: .3s;
+}
+
+#editar-achado.active{
+    animation: slideUp 0.5s forwards;
+}
+#editar-achado.desactive{
+    animation: slideDown 0.5s forwards;
 }
